--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,7 @@ ol, ul {
 
 }
 
-/* Type */
+/* **** Section 1 - Type **** */
 
 body {
   background-color: #fff;
@@ -124,20 +124,16 @@ a, h1, h2, h3, select, textarea {
   color: #e5474b;
 }
 
-/* Button */
+/* **** Section 1 - Buttons **** */
 
 input[type="submit"],
 input[type="reset"],
 input[type="button"],
 button,
 .button {
-  -moz-appearance: none;
   -webkit-appearance: none;
-  -ms-appearance: none;
   appearance: none;
-  -moz-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
   -webkit-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
-  -ms-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
   transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
   border-radius: 0;
   border: 0;
@@ -152,21 +148,6 @@ button,
   text-decoration: none;
   text-transform: uppercase;
   white-space: nowrap;
-}
-
-  input[type="submit"]:hover,
-  input[type="reset"]:hover,
-  input[type="button"]:hover,
-  button:hover,
-  .button:hover {
-    text-decoration: none;
-  }
-
-input[type="submit"],
-input[type="reset"],
-input[type="button"],
-button,
-.button {
   background-color: #5a5a5a;
   color: #ffffff !important;
 }
@@ -176,6 +157,7 @@ button,
   input[type="button"]:hover,
   button:hover,
   .button:hover {
+    text-decoration: none;
     background-color: #676767;
   }
 
@@ -213,7 +195,7 @@ button,
       background-color: #f9dadb;
     }
 
-/* Form */
+/* **** Section 2 - Sign-in Form **** */
 
 form {
   margin: 0 0 2em 0;
@@ -278,6 +260,7 @@ label {
   text-transform: uppercase;
   font-weight: 700;
   margin: 0 0 1em 0;
+  color: #e5474b;
 }
 
 input[type="text"],
@@ -285,9 +268,7 @@ input[type="password"],
 input[type="email"],
 select,
 textarea {
-  -moz-appearance: none;
   -webkit-appearance: none;
-  -ms-appearance: none;
   appearance: none;
   border-radius: 0;
   border: none;
@@ -300,124 +281,7 @@ textarea {
   width: 100%;
 }
 
-  input[type="text"]:invalid,
-  input[type="password"]:invalid,
-  input[type="email"]:invalid,
-  select:invalid,
-  textarea:invalid {
-    box-shadow: none;
-  }
-
-.select-wrapper {
-  text-decoration: none;
-  display: block;
-  position: relative;
-}
-
-  .select-wrapper:before {
-    -moz-osx-font-smoothing: grayscale;
-    -webkit-font-smoothing: antialiased;
-    font-family: FontAwesome;
-    font-style: normal;
-    font-weight: normal;
-    text-transform: none !important;
-  }
-
-  .select-wrapper:before {
-    content: '\f078';
-    display: block;
-    height: 2.75em;
-    line-height: 2.75em;
-    pointer-events: none;
-    position: absolute;
-    right: 0;
-    text-align: center;
-    top: 0;
-    width: 2.75em;
-  }
-
-  .select-wrapper select::-ms-expand {
-    display: none;
-  }
-
-input[type="text"],
-input[type="password"],
-input[type="email"],
-select {
-  height: 2.75em;
-}
-
-textarea {
-  padding: 0.75em 1em;
-}
-
-::-webkit-input-placeholder {
-  opacity: 1.0;
-}
-
-:-moz-placeholder {
-  opacity: 1.0;
-}
-
-::-moz-placeholder {
-  opacity: 1.0;
-}
-
-:-ms-input-placeholder {
-  opacity: 1.0;
-}
-
-.formerize-placeholder {
-  opacity: 1.0;
-}
-
-label {
-  color: #e5474b;
-}
-
-input[type="text"],
-input[type="password"],
-input[type="email"],
-select,
-textarea {
-  background: none;
-  border-color: #fceced;
-}
-
-  input[type="text"]:focus,
-  input[type="password"]:focus,
-  input[type="email"]:focus,
-  select:focus,
-  textarea:focus {
-    border-color: #e5474b;
-    box-shadow: 0 0 0 1px #e5474b;
-  }
-
-.select-wrapper:before {
-  color: #e5474b;
-}
-
-::-webkit-input-placeholder {
-  color: #717171 !important;
-}
-
-:-moz-placeholder {
-  color: #717171 !important;
-}
-
-::-moz-placeholder {
-  color: #717171 !important;
-}
-
-:-ms-input-placeholder {
-  color: #717171 !important;
-}
-
-.formerize-placeholder {
-  color: #717171 !important;
-}
-
-/* List */
+/* **** Section 3 - Lists **** */
 
 ol {
   list-style: decimal;
@@ -439,40 +303,6 @@ ul {
     padding-left: 0.5em;
   }
 
-  ul.alt {
-    list-style: none;
-    padding-left: 0;
-  }
-
-    ul.alt li {
-      border-top: solid 1px;
-      padding: 0.5em 0;
-    }
-
-      ul.alt li:first-child {
-        border-top: 0;
-        padding-top: 0;
-      }
-
-  ul.icons {
-    cursor: default;
-    list-style: none;
-    padding-left: 0;
-  }
-
-    ul.icons li {
-      display: inline-block;
-      padding: 0 1em 0 0;
-    }
-
-      ul.icons li:last-child {
-        padding-right: 0;
-      }
-
-      ul.icons li .icon:before {
-        font-size: 2em;
-      }
-
   ul.actions {
     cursor: default;
     list-style: none;
@@ -493,72 +323,7 @@ ul {
       padding: 0 0.5em 0 0;
     }
 
-    ul.actions.vertical li {
-      display: block;
-      padding: 1em 0 0 0;
-    }
-
-      ul.actions.vertical li:first-child {
-        padding-top: 0;
-      }
-
-      ul.actions.vertical li > * {
-        margin-bottom: 0;
-      }
-
-    ul.actions.vertical.small li {
-      padding: 0.5em 0 0 0;
-    }
-
-      ul.actions.vertical.small li:first-child {
-        padding-top: 0;
-      }
-
-    ul.actions.fit {
-      display: table;
-      margin-left: -1em;
-      padding: 0;
-      table-layout: fixed;
-      width: calc(100% + 1em);
-    }
-
-      ul.actions.fit li {
-        display: table-cell;
-        padding: 0 0 0 1em;
-      }
-
-        ul.actions.fit li > * {
-          margin-bottom: 0;
-        }
-
-      ul.actions.fit.small {
-        margin-left: -0.5em;
-        width: calc(100% + 0.5em);
-      }
-
-        ul.actions.fit.small li {
-          padding: 0 0 0 0.5em;
-        }
-
-dl {
-  margin: 0 0 2em 0;
-}
-
-  dl dt {
-    display: block;
-    font-weight: 700;
-    margin: 0 0 1em 0;
-  }
-
-  dl dd {
-    margin-left: 2em;
-  }
-
-ul.alt li {
-  border-top-color: #e5474b;
-}
-
-/* Section/Article */
+/* **** Section 4 - sections/articles **** */
 
 section.special, article.special {
   text-align: center;
@@ -579,33 +344,7 @@ section .inner {
 
   }
 
-header p {
-  position: relative;
-  margin: 0 0 1.5em 0;
-}
-
-header h2 + p {
-  font-size: 1.25em;
-  margin-top: -1em;
-}
-
-header h3 + p {
-  font-size: 1.1em;
-  margin-top: -0.8em;
-}
-
-header h4 + p,
-header h5 + p,
-header h6 + p {
-  font-size: 0.9em;
-  margin-top: -0.6em;
-}
-
-header p {
-  color: #717171;
-}
-
-/* Table */
+/* **** Section 5 - Tables **** */
 
 #menu {
   padding: 70px;
@@ -646,39 +385,9 @@ table {
     border-top: solid 2px;
   }
 
-  table.alt {
-    border-collapse: separate;
-  }
-
-    table.alt tbody tr td {
-      border: solid 1px;
-      border-left-width: 0;
-      border-top-width: 0;
-    }
-
-      table.alt tbody tr td:first-child {
-        border-left-width: 1px;
-      }
-
-    table.alt tbody tr:first-child td {
-      border-top-width: 1px;
-    }
-
-    table.alt thead {
-      border-bottom: 0;
-    }
-
-    table.alt tfoot {
-      border-top: 0;
-    }
-
 table tbody tr {
   border-color: #e5474b;
 }
-
-  table tbody tr:nth-child(2n + 1) {
-    background-color: none;
-  }
 
 table th {
   color: #e5474b;
@@ -688,15 +397,7 @@ table thead {
   border-bottom-color: #e5474b;
 }
 
-table tfoot {
-  border-top-color: #e5474b;
-}
-
-table.alt tbody tr td {
-  border-color: #e5474b;
-}
-
-/* Header */
+/* **** Section 6 - Header **** */
 
 body {
   position: relative;
@@ -792,80 +493,13 @@ body {
 
 }
 
-/* Menu */
+/* **** Section 7 - Menu **** */
 
 #nav {
   display: inline-block;
 }
 
-  @media screen and (max-width: 980px) {
-
-    #nav {
-      display: none;
-    }
-
-  }
-
-.navPanelToggle {
-  position: fixed;
-  text-decoration: none;
-  height: 4em;
-  right: 3em;
-  top: .75em;
-  width: 4em;
-  display: none;
-  z-index: 10002;
-}
-
-  .navPanelToggle:before {
-    -moz-osx-font-smoothing: grayscale;
-    -webkit-font-smoothing: antialiased;
-    font-family: FontAwesome;
-    font-style: normal;
-    font-weight: normal;
-    text-transform: none !important;
-    color: #fff;
-    display: block;
-    font-size: 16px;
-    height: 2.25em;
-    left: 0.5em;
-    line-height: 2.25em;
-    position: absolute;
-    text-align: center;
-    top: 0.5em;
-    width: 3.5em;
-  }
-
-  @media screen and (max-width: 980px) {
-
-    .navPanelToggle {
-      display: block;
-    }
-
-  }
-
-  @media screen and (max-width: 736px) {
-
-    .navPanelToggle {
-      right: 1em;
-    }
-
-  }
-
-  .navPanelToggle *:before {
-    color: #fff;
-    display: block;
-    font-size: 16px;
-    height: 2.25em;
-    left: 0.5em;
-    line-height: 2.25em;
-    position: absolute;
-    text-align: center;
-    top: 0.5em;
-    width: 3.5em;
-  }
-
-/* Banner */
+/* **** Section 8 - Banner **** */
 
 #banner {
   background-color: #e5474b;
@@ -1026,7 +660,7 @@ body {
 
   }
 
-/* Main */
+/* **** Section 9 - Main Body **** */
 
 #main {
   padding: 4em 0 2em 0;
@@ -1109,20 +743,12 @@ body {
 }
 
   #three .inner {
-    display: -ms-flexbox;
-    display: -moz-flex;
     display: -webkit-flex;
-    display: -ms-flex;
     display: flex;
-    -moz-flex-direction: row;
     -webkit-flex-direction: row;
-    -ms-flex-direction: row;
     flex-direction: row;
-    -moz-justify-content: space-between;
     -webkit-justify-content: space-between;
-    -ms-justify-content: space-between;
     justify-content: space-between;
-    -ms-flex-pack: justify;
   }
 
     #three .inner article {
@@ -1166,7 +792,7 @@ body {
 
   }
 
-/* Footer */
+/* **** Section 9 - Footer **** */
 
 #footer {
   background-color: #e5474b;
@@ -1296,22 +922,6 @@ body {
 
   #footer .select-wrapper:before {
     color: #fff;
-  }
-
-  #footer ::-webkit-input-placeholder {
-    color: #f8d1d2 !important;
-  }
-
-  #footer :-moz-placeholder {
-    color: #f8d1d2 !important;
-  }
-
-  #footer ::-moz-placeholder {
-    color: #f8d1d2 !important;
-  }
-
-  #footer :-ms-input-placeholder {
-    color: #f8d1d2 !important;
   }
 
   #footer .formerize-placeholder {
