--- a/css/styles.css
+++ b/css/styles.css
@@ -742,6 +742,11 @@ body {
   padding: 6em 0 4em 0;
 }
 
+#order_preview p {
+  font-size: 2rem;
+  display: block;
+}
+
   #three .inner {
     display: -webkit-flex;
     display: flex;
