--- a/css/styles.css
+++ b/css/styles.css
@@ -742,6 +742,11 @@ body {
   padding: 6em 0 4em 0;
 }
 
+#order_preview p {
+  font-size: 2rem;
+  margin: 0 auto;
+}
+
   #three .inner {
     display: -webkit-flex;
     display: flex;
@@ -791,6 +796,10 @@ body {
     }
 
   }
+
+#order_preview {
+  padding: 70px;
+}
 
 /* **** Section 9 - Footer **** */
 
